cards' alignment fixed

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -47,6 +47,7 @@
 .projects > .cards {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 @media (max-width: 768px) {
